Fix go live settings header spacing.

--- a/app/components-react/shared/AddDestinationButton.m.less
+++ b/app/components-react/shared/AddDestinationButton.m.less
@@ -53,6 +53,7 @@ button.add-destination-btn {
 
 .info-banner-group {
   padding-bottom: 0px !important;
+  margin-top: 0px !important;
 }
 
 button.info-banner {
@@ -104,7 +105,7 @@ button.add-destination-header {
 }
 
 .ultra-text-styling {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
   text-align: left;
   margin-left: 8px;
@@ -169,8 +170,8 @@ button.add-destination-header {
     width: 12px;
     height: 14px;
     float: inline-end;
-    margin-right: 60px;
-    margin-top: 3px;
+    margin-right: 50px;
+    margin-top: 1px;
   }
 }
 
