--- a/app/components-react/windows/go-live/GoLive.m.less
+++ b/app/components-react/windows/go-live/GoLive.m.less
@@ -406,7 +406,7 @@ i.destination-logo {
   flex-direction: row;
   flex: 1;
   width: 100%;
-  padding: 0px 15px;
+  padding: 15px 0px 15px 15px;
 
   :global(.ant-form-item) {
     margin-bottom: 0px;
@@ -414,6 +414,10 @@ i.destination-logo {
 
   :global(.ant-row) {
     align-items: center;
+  }
+
+  &.ultra-column-header {
+    padding: 15px;
   }
 }
 
@@ -534,7 +538,7 @@ i.destination-logo {
   font-size: 13px;
   border-radius: 6px;
   padding: 8px;
-  margin: 15px;
+  margin: 15px 15px 0px 15px;
   background-color: rgba(23, 36, 45, 0);
   color: rgba(23, 36, 45, 0);
   visibility: hidden;
